added ajout dun p

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa totam dolor asperiores corrupti, tenetur at deserunt, doloremque sed saepe veniam eaque repudiandae tempora vitae, dolorum quae delectus esse neque repellat.</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus odit quibusdam aspernatur consectetur voluptates dolor maxime, et est, voluptatem provident neque officiis minus! Quod laudantium porro voluptate, earum ullam at!</p>
+
+
 </body>
+
 </html>
