--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,15 @@
     <title>frandel</title>
 </head>
 <body>
+   <main>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa totam dolor asperiores corrupti, tenetur at deserunt, doloremque sed saepe veniam eaque repudiandae tempora vitae, dolorum quae delectus esse neque repellat.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus odit quibusdam aspernatur consectetur voluptates dolor maxime, et est, voluptatem provident neque officiis minus! Quod laudantium porro voluptate, earum ullam at!</p>
 
+
+    <p>Lorem,  ipsum dolor sit amet consectetur adipisicing elit. Numquam, quas aspernatur ut in molestias laudantium consequatur ad assumenda, nesciunt dignissimos sit, ipsum repellat facilis omnis at optio nam tempora minima.</p>
+    
+    </main>
+    <footer>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, repudiandae perspiciatis ipsa ea ducimus qui laborum, soluta obcaecati unde sapiente autem eius dolorum? Dicta, numquam fugit inventore harum dolor officia quo?
+         Assumenda in optio veritatis, est necessitatibus sapiente, minus nulla cum nemo libero facere ut.</footer>
 
 </body>
 
