added modification sur la brance dev-jerry

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>frandel</title>
 </head>
 <body>
+   <h1>mouhamed
+   </h1>
+   
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa totam dolor asperiores corrupti, tenetur at deserunt, doloremque sed saepe veniam eaque repudiandae tempora vitae, dolorum quae delectus esse neque repellat.</p>
 </body>
 </html>
